<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:title="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical" >

    <com.bloomlife.android.view.TitleBar
        android:id="@+id/user_agreement_titlebar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/myvideo_title_back"
        title:titleText="@string/activity_agreement_title"
        title:titleTextColor="@color/white"
        title:titleTextSize="@dimen/p_lager_size" >
    </com.bloomlife.android.view.TitleBar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="28dp"
            android:paddingRight="28dp" >
            
            <TextView 
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome_user_agreement_content_title"
                android:textColor="@color/white"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:gravity="center"
                android:textSize="17sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/welcome_user_agreement_1"
                android:textColor="@color/white"
                android:textSize="15sp" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>