<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="65dp"
    android:layout_height="65dp">

    <com.bloomlife.videoapp.view.UploadVideoProgressBar
        android:id="@+id/item_myself_video_upload_progressbar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/item_myself_video_upload_progressbar_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/item_myself_video_upload_progressbar"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/item_my_video_load"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="visible" />

    <TextView
        android:id="@+id/item_myself_video_upload"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/icon_reupload"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/item_my_video_reupload"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/item_myself_video_upload_complete"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:drawableTop="@drawable/icon_upload_comleted"
        android:layout_marginTop="5dp"
        android:drawablePadding="5dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:text="@string/item_my_video_upload_completed"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:visibility="gone" />

</RelativeLayout>